--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -67,30 +67,6 @@ and = and
 
 available = available
 
-basket.delete           = delete all your posts from the clipboard
-basket.edit.tags        = edit the tags of all own posts on your clipboard
-basket.editTags         = edit tags
-basket.export           = export the posts in one of several formats
-basket.exportPosts      = export posts
-# basket page
-basket.info             = Here you can manage publication posts which you have added to your clipboard. For details see <a href="/help/Basket">the help page</a>.
-basket.info.examples    = For example, you can easily:
-basket.infoActions      = For example, you can
-basket.removeAll        = clear clipboard
-basket.removeAllVerbose = remove all publications from the clipboard
-
-clipboard.delete           = delete all your posts from the clipboard
-clipboard.edit.tags        = edit the tags of all own posts on your clipboard
-clipboard.editTags         = edit tags
-clipboard.export           = export the posts in one of several formats
-clipboard.exportPosts      = export posts
-# clipboard page
-clipboard.info             = Here you can manage publication posts which you have added to your clipboard. For details see <a href="/help/clipboard">the help page</a>.
-clipboard.info.examples    = For example, you can easily:
-clipboard.infoActions      = For example, you can
-clipboard.removeAll        = clear clipboard
-clipboard.removeAllVerbose = remove all publications from the clipboard
-
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -313,6 +289,18 @@ by = by
 captcha = captcha
 
 change = change
+
+clipboard.delete           = delete all your posts from the clipboard
+clipboard.edit.tags        = edit the tags of all own posts on your clipboard
+clipboard.editTags         = edit tags
+clipboard.export           = export the posts in one of several formats
+clipboard.exportPosts      = export posts
+# clipboard page
+clipboard.info             = Here you can manage publication posts which you have added to your clipboard. For details see <a href="/help/clipboard">the help page</a>.
+clipboard.info.examples    = For example, you can easily:
+clipboard.infoActions      = For example, you can
+clipboard.removeAll        = clear clipboard
+clipboard.removeAllVerbose = remove all publications from the clipboard
 
 close = close
 
@@ -891,6 +879,7 @@ group.publicationReportingSettings.reportingMailTemplate = mail template
 group.reporting                                          = report publication to {0}
 group.reporting.headline                                 = report publication to group
 group.reporting.mail.subject                             = New publication reported
+group.settings                                           = group settings
 group.updatePermission.update                            = update permissions
 
 grouprequest.mail.body    = <a href="{2}">{1}</a> has requested a new group.<br /><br />Name: {0}<br />Description: {3}<br />Reason: {4}<br /><br /><a href="{5}">Admin Group Page</a>
@@ -1010,6 +999,7 @@ list.entriesPerPage      = per page
 list.expand.bookmarks    = expand bookmarks
 list.expand.both         = show bookmarks and publications
 list.expand.publications = expand publications
+list.hide                = hide
 list.less                = hide entries
 list.more                = show more entries
 # list information
@@ -1120,9 +1110,6 @@ navi.author                      = author
 navi.author.hint                 = author(s)
 navi.authors                     = authors
 navi.automatic.groupRequest      = create group
-navi.clipboard                      = clipboard
-navi.clipboard.empty                = your clipboard is empty
-navi.clipboard.inactive             = Sign in to see your picked items.
 navi.bibtex                      = export BibTeX
 navi.bibtexhashexample           = calculate hashes
 navi.bibtexkey                   = BibTeX key
@@ -1135,6 +1122,9 @@ navi.classifier_nospammer        = Classifier: No Spammer
 navi.classifier_nospammer_unsure = Classifier: No Spammer (U)
 navi.classifier_spammer          = Classifier: Spammer
 navi.classifier_spammer_unsure   = Classifier: Spammer (U)
+navi.clipboard                   = clipboard
+navi.clipboard.empty             = your clipboard is empty
+navi.clipboard.inactive          = Sign in to see your picked items.
 navi.concept                     = concept
 navi.concept.hint                = concept tag(s)
 navi.concepts                    = concepts
@@ -1615,6 +1605,8 @@ post.resource.discussionItem.anonymous.help             = Using the anonymous op
 post.resource.discussionItem.you                        = you
 post.resource.discusssion.warning.goldstandard          = Warning: If you write a comment or review to a post with restricted visibility, a publicly viewable copy of this post will be created. The new post will have no connection to this post's owner.
 post.resource.discusssion.warning.goldstandard.continue = Warning: You are writing a comment or review to a post with restricted visibility. If you continue, a publicly viewable copy of this post will be created. The new post will have no connection to this post's owner. Continue?
+post.resource.document.remove.error                     = Deleting the document failed.
+post.resource.document.remove.error.title               = Error while deleting
 post.resource.editBookmark                              = edit your bookmark post
 post.resource.editGoldStandardBookmark                  = edit this community post
 post.resource.editGoldStandardPublication               = edit this community post
