isbn has been changed! but it is right because of .ris file

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISSNScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ISSNScraperUnitURLTest2.bib
@@ -1,7 +1,7 @@
 @book{varnhagenvonense1986journal,
 address = {Nördlingen},
 author = {Varnhagen von Ense, Karl August},
-isbn = {3921568706 9783921568705},
+isbn = {3921568706 9783921568705 3921568692 9783921568699},
 publisher = {F. Greno},
 refid = {15103739},
 title = {Journal einer Revolution : Tagesblätter 1848/49},
