--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreJournalProceedingsScraperUnitURLTest2.bib
@@ -4,10 +4,10 @@ author={Pakin, Scott},
   booktitle={Parallel and Distributed Processing, 2008. IPDPS 2008. IEEE International Symposium on}, 
  title={Receiver-initiated message passing over RDMA Networks}, 
   year={2008},
-  month={April},
   pages={1-12},
   abstract={Providing point-to-point messaging-passing semantics atop Put/Get hardware traditionally involves implementing a protocol comprising three network latencies. In this paper, we analyze the performance of an alternative implementation approach - receiver-initiated message passing - that eliminates one of the three network latencies. Performance measurements taken on the Cell Broadband Engine indicate that receiver-initiated message passing exhibits substantially lower latency than standard, sender-initiated message passing.},
   keywords={electronic data interchange;file organisation;message passing;Cell Broadband Engine;Put/Get hardware;RDMA networks;point to point messaging passing semantics;receiver initiated message passing;remote direct memory access;sender initiated message passing;Central Processing Unit;Delay;Engines;Ethernet networks;Hardware;Laboratories;Measurement standards;Message passing;Performance analysis;Protocols},
   doi={10.1109/IPDPS.2008.4536262},
-  ISSN={1530-2075},url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=4536262}
+  ISSN={1530-2075},
+  month={April},url = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=4536262}
 }
