--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreStandardsScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreStandardsScraperUnitURLTest.bib
@@ -3,9 +3,9 @@
   journal={IEEE Std 400-2001 (Revision of IEEE Std 400-1991)}, 
  title={IEEE Guide for Field Testing and Evaluation of the Insulation of Shielded Power Cable Systems}, 
   year={2002},
-  month={Jan},
   pages={1-40},
   abstract={This Guide lists the various field test methods that are currently available or underdevelopment with guidance on HOW to perform each test. The Guide covers shielded, insulatedpower cable systems rated 5 kV through 500 kV unless these voltages are modified by the specific "point" document.},
   keywords={alternating-polarity dc-biased ac voltage;dissipation factor testing;field test;high-voltage dc testing},
-  doi={10.1109/IEEESTD.2002.93394},url = {http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?tp=&isnumber=21156&arnumber=982216&punumber=7718}
+  doi={10.1109/IEEESTD.2002.93394},
+  month={Jan},url = {http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?tp=&isnumber=21156&arnumber=982216&punumber=7718}
 }
