--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1080,8 +1080,8 @@ name = name
 navi.about                       = Contact
 navi.account                     = account
 navi.admin                       = admin
+navi.admin.fulltextsearch        = full text search 
 navi.admin.group                 = groups
-navi.admin.lucene                = lucene
 navi.admin.oauth                 = oauth
 navi.admin.recommender           = recommenders
 navi.admin.spam                  = spam
