issue #2451 oauth admin page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -28,7 +28,9 @@ admin.actions.oauth                = Manage OAuth Consumers
 admin.actions.scraper              = Scraper info 
 admin.actions.user                 = User info
 admin.group.pending                = pending groups
+admin.oauth.consumer               = 
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = delete
 admin.oauth.consumer.description   = description
 admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Are you sure you want to remove this consumer?
@@ -42,6 +44,7 @@ admin.oauth.consumer.serviceName   = Service Name
 admin.oauth.consumer.summary       = Summary
 admin.oauth.consumer.thumbnail     = Thumbnail
 admin.oauth.consumer.title         = Title
+admin.oauth.consumer.tokens        = Tokens
 admin.recommender.active.item      = Active item recommenders
 admin.recommender.active.tag       = Active tag recommenders
 admin.recommender.add.item         = Add item recommender URL
@@ -2444,4 +2447,3 @@ wordpress.plugin = WordPress Plugin
 yes = yes
 
 younger = younger
-admin.oauth.consumer.delete=delete
