--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -28,7 +28,9 @@ admin.actions.oauth                = OAuth Consumer bearbeiten
 admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
 admin.group.pending                = Gruppenantr\u00E4ge
+admin.oauth.consumer               = 
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = l\u00C3\u00B6schen
 admin.oauth.consumer.description   = Beschreibung
 admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Sind Sie sicher, dass sie diesen Consumer l\u00F6schen m\u00F6chten?\n
@@ -42,6 +44,7 @@ admin.oauth.consumer.serviceName   = Service Name
 admin.oauth.consumer.summary       = Zusammenfassung
 admin.oauth.consumer.thumbnail     = Thumbnail
 admin.oauth.consumer.title         = Titel
+admin.oauth.consumer.tokens        = Tokens
 admin.recommender.active.item      = Aktive Item Recommender
 admin.recommender.active.tag       = Aktive Tag Recommender
 admin.recommender.add.item         = Item Recommender-URL hinzuf\u00FCgen
@@ -2392,4 +2395,3 @@ wordpress.plugin = WordPress Plugin
 yes = ja
 
 younger = j\u00FCngere
-admin.oauth.consumer.delete=löschen
