--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -28,7 +28,9 @@ admin.actions.oauth                = \u0423\u043F\u0440\u0430\u0432\u043B\u0435\
 admin.actions.scraper              = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u0441\u043A\u0440\u0435\u0439\u043F\u0435\u0440\u0430\u0445
 admin.actions.user                 = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435
 admin.group.pending                = \u0413\u0440\u0443\u043F\u043F\u044B \u0432 \u043E\u0436\u0438\u0434\u0430\u043D\u0438\u0438
+admin.oauth.consumer               = 
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = delete
 admin.oauth.consumer.description   = \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 admin.oauth.consumer.details       = \u041F\u043E\u0434\u0440\u043E\u0431\u043D\u043E\u0441\u0442\u0438 \u043E \u043A\u043B\u0438\u0435\u043D\u0442\u0435
 admin.oauth.consumer.ensure_delete = \u0412\u044B \u0443\u0432\u0435\u0440\u0435\u043D\u044B, \u0447\u0442\u043E \u0436\u0435\u043B\u0430\u0435\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043B\u0438\u0435\u043D\u0442\u0430?
@@ -42,6 +44,7 @@ admin.oauth.consumer.serviceName   = \u0418\u043C\u044F \u0441\u0435\u0440\u0432
 admin.oauth.consumer.summary       = \u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 admin.oauth.consumer.thumbnail     = Thumbnail
 admin.oauth.consumer.title         = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+admin.oauth.consumer.tokens        = Tokens
 admin.recommender.active.item      = \u0410\u043A\u0442\u0438\u0432\u043D\u0430\u044F \u0440\u0435\u043A\u043E\u043C\u0435\u043D\u0434\u0430\u0442\u0435\u043B\u044C\u043D\u0430\u044F \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u0437\u0430\u043F\u0438\u0441\u0435\u0439
 admin.recommender.active.tag       = \u0410\u043A\u0442\u0438\u0432\u043D\u0430\u044F \u0440\u0435\u043A\u043E\u043C\u0435\u043D\u0434\u0430\u0442\u0435\u043B\u044C\u043D\u0430\u044F \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u0442\u044D\u0433\u043E\u0432
 admin.recommender.add.item         = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C URL \u0440\u0435\u043A\u043E\u043C\u043C\u0435\u043D\u0434\u0430\u0442\u0435\u043B\u044C\u043D\u043E\u0439 \u0441\u0438\u0441\u0442\u0435\u043C\u044B \u0437\u0430\u043F\u0438\u0441\u0435\u0439
@@ -2267,4 +2270,3 @@ wordpress.plugin = \u041F\u043B\u0430\u0433\u0438\u043D \u0434\u043B\u044F
 yes = \u0434\u0430
 
 younger = \u043D\u043E\u0432\u0435\u0435
-admin.oauth.consumer.delete=delete
