Issues 2553 (delete "follow this user" link), 2554 (inconsistent spelling of "genealogy")  and 2555 (escaped apostrophe) solved

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1194,7 +1194,7 @@ navi.passReminder.button         = send
 navi.password                    = password
 navi.password.ldap               = pin code
 navi.pdfs                        = documents
-navi.persons                     = genealogie
+navi.persons                     = genealogy
 navi.popular                     = popular
 navi.postBookmark                = post bookmark
 navi.postBookmarkPopup           = post bookmark (popup)
@@ -1298,7 +1298,7 @@ person.new.newPersonButton                        = New person
 person.new.personPanelHeader                      = About this person
 person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
-person.newthesis.default.tag                      = genealogie
+person.newthesis.default.tag                      = genealogy
 person.show.B1st                                  = First reviewer
 person.show.B1st.of                               = , first reviewer of
 person.show.B1stTooltip                           = First reviewer of the dissertation
@@ -1395,19 +1395,19 @@ persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy_english.svg
 persons.intro.genealogy.text   = {0} Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB). Users enter linkages between existing dissertations (advisor information etc.) and provide information about missing dissertations.
 persons.intro.head.desc        = A Dissertation-based Genealogy of Research at German Universities
-persons.intro.head.title       = {0} Genealogie
+persons.intro.head.title       = {0} Genealogy
 persons.intro.navi.dataset     = Who Can Participate?
-persons.intro.navi.genealogy   = What Is {0} Genealogie?
-persons.intro.navi.reg         = How Does {0} Genealogie Work?
+persons.intro.navi.genealogy   = What Is {0} Genealogy?
+persons.intro.navi.reg         = How Does {0} Genealogy Work?
 persons.intro.navi.search      = Search Dissertation Authors
-persons.intro.navi.wiskidz     = Who is behind {0} Genealogie?
+persons.intro.navi.wiskidz     = Who is behind {0} Genealogy?
 persons.intro.reg.desc         = &nbsp;
 persons.intro.reg.img          = /resources/image/logo_person_reg.svg
 persons.intro.reg.text         = {0} Genealogy builds on the competence and experience of {0}, the non-commercial \u0009platform for sharing publications and bookmarks. User registration and secure data management are \u0009implemented via the {0} platform. Data are exclusively used for non-commercial science and higher education research.
 persons.intro.search.desc      = Enter Person Name (Author, Advisor etc.) or Title 
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
-persons.intro.wiskidz.text     = {0} Genealogie is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German Federal Ministry of Education and Research (BMBF). 
+persons.intro.wiskidz.text     = {0} Genealogy is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German Federal Ministry of Education and Research (BMBF). 
 
 plain = plain
 
@@ -2439,7 +2439,7 @@ users = users
 
 users.recommended  = recommended users
 users.similar      = similar users
-users.similar.for  = {0}&#39;s similar users
+users.similar.for  = similar users
 users.similar.your = your similar users
 
 within.last.days = within the last {0} days
