--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1146,6 +1146,7 @@ navi.passReminder.button         = Senden
 navi.password                    = Passwort
 navi.password.ldap               = PIN-Code
 navi.pdfs                        = Dokumente
+navi.persons                     = Genealogie
 navi.popular                     = Beliebt
 navi.postBookmark                = Lesezeichen eintragen
 navi.postBookmarkPopup           = Lesezeichen eintragen (popup)
@@ -1249,7 +1250,7 @@ person.new.newPersonButton                        = Neue Person
 person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
-person.newthesis.default.tag                      = genealogie
+person.newthesis.default.tag                      = Genealogie
 person.show.B1st                                  = Erstgutachter_in
 person.show.B1st.of                               = , Erstgutachter_in von
 person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
@@ -1344,7 +1345,7 @@ persons.intro.dataset.img      = /resources/image/logo_person_dataset.svg
 persons.intro.dataset.text     = Forscherinnen und Forscher aller F\u00E4cher und Disziplinen. Promovierte k\u00F6nnen ihre Dissertation mit ihrem Doktorvater bzw. ihrer Doktormutter verkn\u00FCpfen und nach ihren Wurzeln in der Wissenschaft suchen. Betreuerinnen und Betreuer \u0009k\u00F6nnen die von ihnen betreuten Arbeiten dokumentieren. Und alle zusammen tragen dazu bei, einen f\u00E4cher\u00FCbergreifenden Stammbaum der \u0009Forschung in Deutschland zu erstellen.
 persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy.svg
-persons.intro.genealogy.text   = Die {0} Genaologie  erstellt nutzerbasiert einen Stammbaum der Forschung an deutschen Universit\u00E4ten. Ausgangspunkt ist der Dissertationskatalog der Deutschen Nationalbibliothek. Nutzerbasiert werden Beziehungen zwischen den an der Dissertation beteiligten Personen (Autor_in, Betreuer_in etc.) erg\u00E4nzt.
+persons.intro.genealogy.text   = Die {0} Genealogie  erstellt nutzerbasiert einen Stammbaum der Forschung an deutschen Universit\u00E4ten. Ausgangspunkt ist der Dissertationskatalog der Deutschen Nationalbibliothek. Nutzerbasiert werden Beziehungen zwischen den an der Dissertation beteiligten Personen (Autor_in, Betreuer_in etc.) erg\u00E4nzt.
 persons.intro.head.desc        = Dissertationsbasierter Stammbaum der Forschung an deutschen Universit\u00E4ten
 persons.intro.head.title       = {0} Genealogie
 persons.intro.navi.dataset     = Wer kann mitmachen?
@@ -2386,7 +2387,7 @@ users = Benutzer
 
 users.recommended  = Empfohlene Benutzer
 users.similar      = \u00C4hnliche Benutzer
-users.similar.for  = {0}s \u00E4hnliche Benutzer
+users.similar.for  = \u00E4hnliche Benutzer
 users.similar.your = Ihnen \u00E4hnliche Benutzer
 
 within.last.days = in den letzten {0} Tagen
