Refaktoring APHAScraper; now APHAScraper can extract bibtex files from the Host http://www.emeraldinsight.com/; this host emeraldinsight.com was in CoinsScraper CoinsScraper works now very well and APHAScraper works now very well :-) :-)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest3.bib
@@ -1,16 +1,21 @@
-@article{bligh1959rapid,
-author = {Bligh, E. G. and Dyer, W. J.},
-booktitle = {Canadian Journal of Biochemistry and Physiology},
-comment = {doi: 10.1139/o59-099},
-doi = {10.1139/o59-099},
-issn = {05765544},
-journal = {Can. J. Biochem. Physiol.},
-month = {aug},
-number = {8},
-pages = {911--917},
-publisher = {NRC Research Press},
+@article{doi:10.1139/o59-099,
+author = {E. G. Bligh and W. J. Dyer},
 title = {A RAPID METHOD OF TOTAL LIPID EXTRACTION AND PURIFICATION},
-url = {http://dx.doi.org/10.1139/o59-099},
+journal = {Canadian Journal of Biochemistry and Physiology},
 volume = {37},
-year = {1959}
+number = {8},
+pages = {911-917},
+year = {1959},
+doi = {10.1139/o59-099},
+    note ={PMID: 13671378},
+
+URL = { 
+        http://dx.doi.org/10.1139/o59-099
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1139/o59-099
+    
+}
+
 }
