removed captcha from register section header if mockcaptcha is configured

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1867,6 +1867,7 @@ register.openid.step1               = Step 1 - Insert your OpenID below
 register.openid.step2               = Step 2 - Edit profile data
 # register form
 register.personal                   = Personal Information
+register.privacy                    = Privacy and Terms of Use
 register.saml.optional              = Optional Information
 register.saml.registerUser.activate = activate
 register.saml.registerUser.email    = email
