--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1814,6 +1814,7 @@ register.openid.step1               = Schritt 1 - Geben Sie im unteren Feld Ihre
 register.openid.step2               = Schritt 2 - Profildaten bearbeiten
 # register form parts
 register.personal                   = Pers\u00F6nliche Informationen
+register.privacy                    = Datenschutzerkl\u00E4rung und Nutzungsbedingungen
 register.saml.optional              = optionale Information
 register.saml.registerUser.activate = aktivieren
 register.saml.registerUser.email    = E-Mail-Adresse
