--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -822,6 +822,8 @@ group.cv.title                                           = Lebenslauf der Gruppe
 group.description.headline                               = Beschreibung
 group.description.help                                   = eine kurze Beschreibung der Gruppe
 group.doesnotexist.header                                = Gruppe existiert nicht
+group.groupRequest.adminName                             = Gruppenadministrator
+group.groupRequest.adminName.helptext                    = Geben Sie hier den Namen des gew\u00FCnschten Gruppenadministrators der neuen Gruppe ein.
 group.groupRequest.description                           = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Sie Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
 group.groupRequest.reason                                = Begr\u00FCndung
 group.groupRequest.reason.help                           = Der Zweck zudem die Gruppe verwendet werden soll
@@ -1776,7 +1778,7 @@ qrcode.actions.qrDownload                     = Download PDF mit eingebettetem Q
 qrcode.error.errorHeader                      = Fehler
 qrcode.error.errorMessage                     = Es ist keine Kamera angeschlossen. Um den Code-Leser benutzen zu k\u00F6nnen, m\u00FCssen Sie eine Kamera an Ihren PC anschlie\u00DFen.
 qrcode.error.flashMissing                     = Der Code-Leser ben\u00F6tigt den Adobe Flash Player auf Ihrem System.
-qrcode.info.clipboard.readerInfoMessage          = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes von Publikationen einzulesen, um diese zur Ablage hinzuzuf\u00FCgen. Halten Sie dazu den QR-Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
+qrcode.info.clipboard.readerInfoMessage       = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes von Publikationen einzulesen, um diese zur Ablage hinzuzuf\u00FCgen. Halten Sie dazu den QR-Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
 qrcode.info.embedderInfoMessage               = Standardm\u00E4\u00DFig wird Ihr Dokument mit einem QR-Code versehen, der die URL zum zugeh\u00F6rigen {0}-Eintrag enth\u00E4lt. Sie k\u00F6nnen Publikationen leicht zu Ihrer Ablage hinzuf\u00FCgen, wenn Sie in Ihrer Ablage diesen QR-Code mit Hilfe einer Webcam vom gedruckten Dokument einlesen. Auf diese Weise k\u00F6nnen Sie z. B. leicht die Referenzen zu einer Forschungsarbeit in Ihrer Ablage zusammenstellen. Wenn sie diesen Link benutzen, erhalten sie die Originalfassung des Dokuments ohne eingebetteten QR-Code.
 qrcode.info.postPublication.readerInfoMessage = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes oder ISBN Nummern von Publikationen oder B\u00FCchern einzulesen, sodass diese automatisch eingetragen werden. Halten Sie dazu den Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
 
@@ -1889,7 +1891,8 @@ reporting.publication.type.standard      = Standard
 reporting.publication.type.techreport    = ver\u00F6ffentlichter Bericht einer Hochschule oder anderen Institution
 reporting.publication.type.unpublished   = nicht formell ver\u00F6ffentlichtes Dokument
 
-requestGroup.spammerError = Sie k\u00F6nnen keine Gruppen beantragen.
+requestGroup.spammerError      = Sie k\u00F6nnen keine Gruppen beantragen.
+requestGroup.userNotExistError = Es existiert kein Benutzer mit dem Namen "{0}".
 
 reset = Reset
 
@@ -1976,11 +1979,9 @@ settings.group                                              = Gruppe
 settings.group.accInvite.button                             = akzeptieren
 settings.group.accInvite.button.title                       = Gruppeneinladung annehmen
 settings.group.accUser                                      = Beitrittsgesuch des Benutzers {0} akzeptieren
-settings.group.accUser.button.title                         = Nutzer aus Gruppe entfernen
 settings.group.accUser.button                               = akzeptieren
-settings.group.accUser.button.title                         = Mitgliedschaftsantrag des Benutzers annehmen
-settings.group.addUser                                      = Einen Benutzer zu meiner Gruppe hinzuf\u00FCgen
 settings.group.accUser.button.title                         = Nutzer aus Gruppe entfernen
+settings.group.addUser                                      = Einen Benutzer zu meiner Gruppe hinzuf\u00FCgen
 settings.group.addUser.button                               = Benutzer hinzuf\u00FCgen
 settings.group.addUser.button.title                         = Benutzer hinzuf\u00FCgen
 settings.group.addUser.help                                 = Der Name des Benutzers, der zur Gruppe hinzugef\u00FCgt werden soll
