--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -864,6 +864,8 @@ group.cv.title                                           = CV of {0} group
 group.description.headline                               = description
 group.description.help                                   = a short description of the group
 group.doesnotexist.header                                = group does not exist
+group.groupRequest.adminName                             = group admin user
+group.groupRequest.adminName.helptext                    = Enter the username of the user, that should be administrator of the new created group. 
 group.groupRequest.description                           = Here you can request a new group. Please enter the desired name of the group and the main purpose of the group you request. We will inform you as soon as a system administrator approved your group.
 group.groupRequest.reason                                = reason for request
 group.groupRequest.reason.help                           = the reason why you need the group
@@ -1830,7 +1832,7 @@ qrcode.actions.qrDownload                     = Download PDF with embedded QR co
 qrcode.error.errorHeader                      = Error
 qrcode.error.errorMessage                     = No camera found. To use the code scanner you have to connect a webcam to your computer.
 qrcode.error.flashMissing                     = The code reader requires the Adobe flash player.
-qrcode.info.clipboard.readerInfoMessage          = With the help of the code reader you have the possibility to add publications to your clipboard by scanning QR Codes of publications using your webcam. Hold the code right in front your camera such that it appears within the picture.
+qrcode.info.clipboard.readerInfoMessage       = With the help of the code reader you have the possibility to add publications to your clipboard by scanning QR Codes of publications using your webcam. Hold the code right in front your camera such that it appears within the picture.
 qrcode.info.embedderInfoMessage               = By default your document is downloaded with an embedded QR Code containing the URL to the corresponding {0} post. You can later add that publication to your clipboard simply by scanning the QR-Code using a webcam on your clipboard page. Thus you can quickly compile a reference list from the publications you have printed. If you follow this link you will be provided with the original document without an embedded QR Code.
 qrcode.info.postPublication.readerInfoMessage = With the help of the code reader you have the possibility to automatically post publications by scanning QR Codes or ISBN codes of publications or books using your webcam. Hold the code right in front your camera such that it appears within the picture.
 
@@ -1943,7 +1945,8 @@ reporting.publication.type.standard      = standard
 reporting.publication.type.techreport    = techreport
 reporting.publication.type.unpublished   = unpublished
 
-requestGroup.spammerError = Requesting a new group is not possible.
+requestGroup.spammerError      = Requesting a new group is not possible.
+requestGroup.userNotExistError = There's no user with the name "{0}".
 
 reset = reset
 
