--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -820,6 +820,8 @@ group.cv.publications                                    = \u041D\u043E\u0432\u0
 group.cv.title                                           = \u0420\u0435\u0437\u044E\u043C\u0435 \u0433\u0440\u0443\u043F\u043F\u044B {0}
 group.description.help                                   = \u041A\u043E\u0440\u043E\u0442\u043A\u043E\u0435 \u043E\u043F\u0438\u0446\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 group.doesnotexist.header                                = \u0413\u0440\u0443\u043F\u043F\u0430 \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
+group.groupRequest.adminName                             = 
+group.groupRequest.adminName.helptext                    = 
 group.groupRequest.description                           = \u0417\u0434\u0435\u0441\u044C \u0432\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u043E\u0441\u0442\u0430\u0432\u0438\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443 \u043D\u0430 \u043D\u043E\u0432\u0443\u044E \u0433\u0440\u0443\u043F\u043F\u0443. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0443\u043A\u0430\u0436\u0438\u0442\u0435 \u0436\u0435\u043B\u0430\u0435\u043C\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B \u0438 \u043E\u0431\u043E\u0441\u043D\u0443\u0439\u0442\u0435 \u0441\u0432\u043E\u044E \u0437\u0430\u044F\u0432\u043A\u0443. \u041C\u044B \u0432\u0430\u0441 \u043F\u0440\u043E\u0438\u043D\u0444\u043E\u0440\u043C\u0438\u0440\u0443\u0435\u043C, \u043A\u0430\u043A \u0442\u043E\u043B\u044C\u043A\u043E \u0433\u0440\u0443\u043F\u043F\u0430 \u0431\u0443\u0434\u0435\u0442 \u043E\u0434\u043E\u0431\u0440\u0435\u043D\u0430 \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440\u043E\u043C.
 group.groupRequest.reason                                = \u041E\u0431\u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 group.groupRequest.reason.help                           = \u041F\u0440\u0438\u0447\u0438\u043D\u0430, \u043F\u043E \u043A\u043E\u0442\u043E\u0440\u043E\u0439 \u0412\u0430\u043C \u043D\u0443\u0436\u043D\u0430 \u0433\u0440\u0443\u043F\u043F\u0430
@@ -1762,7 +1764,8 @@ reporting.publication.type.standard      = \u0441\u0442\u0430\u043D\u0434\u0430\
 reporting.publication.type.techreport    = \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u043E\u0442\u0447\u0435\u0442
 reporting.publication.type.unpublished   = \u043D\u0435\u043E\u043F\u0443\u0431\u043B\u0438\u043A\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 
-requestGroup.spammerError = \u0412\u044B \u043D\u0435 \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0430\u043F\u0440\u0430\u0448\u0438\u0432\u0430\u0442\u044C \u0433\u0440\u0443\u043F\u043F\u044B.
+requestGroup.spammerError      = \u0412\u044B \u043D\u0435 \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0430\u043F\u0440\u0430\u0448\u0438\u0432\u0430\u0442\u044C \u0433\u0440\u0443\u043F\u043F\u044B.
+requestGroup.userNotExistError = 
 
 reset = \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C
 
