adapted diff formatter tag: instead of X unit and Y subunit the tag now outputs only X units ago
replaced seconds with "just now"

fixes #2077

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2362,22 +2362,19 @@ tags.of_resource         = tags of this resource
 
 text = text
 
-time.a_day           = a day
-time.a_minute        = a minute
-time.a_month         = a month
-time.a_year          = a year
-time.about_a_second  = about a second
-time.about_x_seconds = about {0} seconds
-time.an_hour         = an hour
-time.and             = and
-time.postfix         = \ ago
-time.prefix          = 
-time.x_days          = {0} days
-time.x_hours         = {0} hours
-time.x_minutes       = {0} minutes
-time.x_months        = {0} months
-time.x_seconds       = {0} seconds
-time.x_years         = {0} years
+time.a_day     = a day
+time.a_minute  = a minute
+time.a_month   = a month
+time.a_year    = a year
+time.an_hour   = an hour
+time.justnow   = just now
+time.postfix   = \ ago
+time.prefix    = 
+time.x_days    = {0} days
+time.x_hours   = {0} hours
+time.x_minutes = {0} minutes
+time.x_months  = {0} months
+time.x_years   = {0} years
 
 totop = to top
 
