--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2309,22 +2309,19 @@ tags.of_resource         = Tags zu diesem Eintrag
 
 text = Text
 
-time.a_day           = einem Tag
-time.a_minute        = einer Minute
-time.a_month         = einem Monat
-time.a_year          = einem Jahr
-time.about_a_second  = einer Sekunde
-time.about_x_seconds = {0} Sekunden
-time.an_hour         = einer Stunde
-time.and             = und
-time.postfix         = 
-time.prefix          = vor 
-time.x_days          = {0} Tagen
-time.x_hours         = {0} Stunden
-time.x_minutes       = {0} Minuten
-time.x_months        = {0} Monaten
-time.x_seconds       = {0} Sekunden
-time.x_years         = {0} Jahren
+time.a_day     = einem Tag
+time.a_minute  = einer Minute
+time.a_month   = einem Monat
+time.a_year    = einem Jahr
+time.an_hour   = einer Stunde
+time.justnow   = gerade eben
+time.postfix   = 
+time.prefix    = vor 
+time.x_days    = {0} Tagen
+time.x_hours   = {0} Stunden
+time.x_minutes = {0} Minuten
+time.x_months  = {0} Monaten
+time.x_years   = {0} Jahren
 
 totop = nach oben
 
