--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2186,22 +2186,19 @@ tags.of_resource         = \u0442\u044D\u0433\u0438, \u043F\u0440\u0438\u0441\u0
 
 text = \u0442\u0435\u043A\u0441\u0442
 
-time.a_day           = \u043E\u0434\u0438\u043D \u0434\u0435\u043D\u044C
-time.a_minute        = \u043E\u0434\u043D\u0443 \u043C\u0438\u043D\u0443\u0442\u0443
-time.a_month         = \u043E\u0434\u0438\u043D \u043C\u0435\u0441\u044F\u0446
-time.a_year          = \u0433\u043E\u0434
-time.about_a_second  = \u043E\u043A\u043E\u043B\u043E \u0441\u0435\u043A\u0443\u043D\u0434\u0443
-time.about_x_seconds = {0} \u0441\u0435\u043A\u0443\u043D\u0434
-time.an_hour         = \u043E\u0434\u0438\u043D \u0447\u0430\u0441
-time.and             = \u0438
-time.postfix         = \ \u043D\u0430\u0437\u0430\u0434
-time.prefix          = 
-time.x_days          = {0} \u0434\u043D\u0435\u0439
-time.x_hours         = {0} \u0447\u0430\u0441\u043E\u0432
-time.x_minutes       = {0} \u043C\u0438\u043D\u0443\u0442
-time.x_months        = {0} \u043C\u0435\u0441\u044F\u0446\u0435\u0432
-time.x_seconds       = {0} \u0441\u0435\u043A\u0443\u043D\u0434
-time.x_years         = {0} \u043B\u0435\u0442
+time.a_day     = \u043E\u0434\u0438\u043D \u0434\u0435\u043D\u044C
+time.a_minute  = \u043E\u0434\u043D\u0443 \u043C\u0438\u043D\u0443\u0442\u0443
+time.a_month   = \u043E\u0434\u0438\u043D \u043C\u0435\u0441\u044F\u0446
+time.a_year    = \u0433\u043E\u0434
+time.an_hour   = \u043E\u0434\u0438\u043D \u0447\u0430\u0441
+time.justnow   = 
+time.postfix   = \ \u043D\u0430\u0437\u0430\u0434
+time.prefix    = 
+time.x_days    = {0} \u0434\u043D\u0435\u0439
+time.x_hours   = {0} \u0447\u0430\u0441\u043E\u0432
+time.x_minutes = {0} \u043C\u0438\u043D\u0443\u0442
+time.x_months  = {0} \u043C\u0435\u0441\u044F\u0446\u0435\u0432
+time.x_years   = {0} \u043B\u0435\u0442
 
 totop = \u043D\u0430\u0432\u0435\u0440\u0445
 
