search.invalid.query message added

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1913,6 +1913,8 @@ scraper_info.scraper_help_link        = /help_de/Scraper
 scraper_info.scraper_link_description = Im Folgenden finden Sie eine Liste aller unters\u00FCtzten Kataloge, deren Publikationen mittels des <a href="/buttons">"postPublication"-Knopfs oder der Brwoser Plugins</a> f\u00FCr Sie extrahiert werden k\u00F6nnen. Sie bilden einen guten Einstiegspunkt, um schnell die Literatureintr\u00E4ge der f\u00FCr Sie interessanten Dokumente in {0} zu \u00FCbertragen.
 scraper_info.title                    = Information zu Scrapern
 
+search.invalid.query	= Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
+
 selection = Auswahl
 
 selection.help = F\u00FCgen Sie hier Ihren BibTeX oder EndNote Schnipsel ein.
