--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2388,7 +2388,7 @@ users = Benutzer
 
 users.recommended  = Empfohlene Benutzer
 users.similar      = \u00C4hnliche Benutzer
-users.similar.for  = \u00E4hnliche Benutzer
+users.similar.for  = {0}s \u00E4hnliche Benutzer
 users.similar.your = Ihnen \u00E4hnliche Benutzer
 
 within.last.days = in den letzten {0} Tagen
