cleaned up group request controller

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2254,7 +2254,7 @@ subtags = subtags
 
 success = success
 
-success.group.activation      = Your group has been activated
+success.group.created         = Group created successfully.
 success.groupDelete           = The group {0} has been deleted successfully.
 success.groupRequest.sent     = Your request to create the group {0} has been forwarded to the system's administrators.
 success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
