cleaned up delete group controller
added todos (TODO_GROUPS)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2064,7 +2064,7 @@ settings.group.description.help                             = This description w
 settings.group.disband                                      = disband group
 # disband group
 settings.group.disband.InfoText                             = If you delete this group, all group documents will be lost. 
-settings.group.disband.notEmptyInfoText                     = This group can only be disbanded, if you remove all other group members firs.
+settings.group.disband.notEmptyInfoText                     = You can disband this group after you removed all other group members.
 settings.group.disband.yesToDeleteGroup                     = (type {0} to delete this group)
 settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
