escapeHtml for bookmark list

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -365,9 +365,9 @@ cv.name                    = name
 cv.nowikitext              = <h2>No CV available</h2>\r\n\r\nThis user hasn't created a CV yet.
 cv.options.DIN1505         = DIN1505
 cv.options.harvard         = harvard
-cv.options.hide_details    = [details]
+cv.options.hide_details    = [hide details]
 cv.options.plain           = plain
-cv.options.show_details    = [details]
+cv.options.show_details    = [show details]
 cv.options.simpleHTML      = simpleHTML
 cv.own_bookmarks           = my web pages
 cv.personal_data           = personal data
