--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -364,9 +364,9 @@ cv.name                    = Name
 cv.nowikitext              = <h2>Kein Lebenslauf vorhanden!</h2>\r\n\r\nDieser Benutzer hat noch keinen Lebenslauf erstellt.
 cv.options.DIN1505         = DIN1505
 cv.options.harvard         = Harvard
-cv.options.hide_details    = [Details]
+cv.options.hide_details    = [Details ausblenden]
 cv.options.plain           = Einfach
-cv.options.show_details    = [Details]
+cv.options.show_details    = [Details anzeigen]
 cv.options.simpleHTML      = simpleHTML
 cv.own_bookmarks           = meine Webseiten
 cv.personal_data           = Zur Person
@@ -1913,7 +1913,7 @@ scraper_info.scraper_help_link        = /help_de/Scraper
 scraper_info.scraper_link_description = Im Folgenden finden Sie eine Liste aller unters\u00FCtzten Kataloge, deren Publikationen mittels des <a href="/buttons">"postPublication"-Knopfs oder der Brwoser Plugins</a> f\u00FCr Sie extrahiert werden k\u00F6nnen. Sie bilden einen guten Einstiegspunkt, um schnell die Literatureintr\u00E4ge der f\u00FCr Sie interessanten Dokumente in {0} zu \u00FCbertragen.
 scraper_info.title                    = Information zu Scrapern
 
-search.invalid.query	= Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
+search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Auswahl
 
