--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1648,6 +1648,7 @@ post.resource.generateBibtexKey.export                  = generated BibTeX keys
 post.resource.go                                        = Go!
 post.resource.groups                                    = visibility settings
 post.resource.groups.describe                           = post visibility
+post.resource.groups.options                            = group options
 post.resource.hint                                      = Posting could be so easy: just <strong>drag and drop</strong> our <a href="/buttons">buttons</a> to your bookmark toolbar.
 post.resource.hint1                                     = Find further information about these buttons or about our browser add-ons on the <a href="/buttons">buttons page</a>.
 post.resource.howpublished                              = howpublished
