--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1599,6 +1599,7 @@ post.resource.generateBibtexKey.export                  = automatisch erzeugte B
 post.resource.go                                        = Los
 post.resource.groups                                    = Sichtbarkeit
 post.resource.groups.describe                           = Sichtbarkeit - Wer darf den Post sehen
+post.resource.groups.options                            = Gruppenoptionen
 post.resource.hint                                      = Eintragen kann so einfach sein: <strong>Ziehen Sie einfach</strong> unsere <a href="/buttons">Schaltfl\u00E4chen</a> in die Linkleiste Ihres Browsers.
 post.resource.hint1                                     = Weitere Informationen \u00FCber die Buttons oder unsere Browser-Add-Ons gibt es auf der  <a href="/buttons">Buttons-Seite</a>.
 post.resource.howpublished                              = Art der Ver\u00F6ffentlichung
