a more configurable footer (ub stuttgart)

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -713,25 +713,26 @@ followersPage.contentHeading                = Diese Lesezeichen und Publikatione
 followersPage.entries.ofAllFollowedUsers    = von allen Benutzern, denen Sie folgen
 followersPage.entries.ofUser                = des Benutzers {0}, dem Sie folgen
 
-footer.about          = \u00DCber
-footer.academicPuma   = PUMA
-footer.buttons        = Browser Buttons
-footer.cookies        = <a href="/help_de/Datenschutz">Cookies</a>
-footer.developer      = Entwickler
-footer.gettingStarted = Erste Schritte
-footer.google         = Google+ Community
-footer.integration    = Integration
-footer.links          = N\u00FCtzliche Links
-footer.mailingList    = Mailing Liste
-footer.overview       = \u00DCberblick
-footer.privacyContact = Kontakt und Datenschutz
-footer.quickstart     = <a href="/help_de/MainEinsteiger">Erste Schritte</a>
-footer.scraperInfo    = Unterst\u00FCtzte Kataloge
-footer.socialMedia    = Social Media
-footer.team           = Team
-footer.twitter        = Folge uns auf Twitter
-footer.what           = Was ist {0}?
-footer.wiki           = {0} Wiki
+footer.about           = \u00DCber
+footer.academicPuma    = PUMA
+footer.buttons         = Browser Buttons
+footer.cookies         = <a href="/help_de/Cookies">Cookies</a>
+footer.developer       = Entwickler
+footer.gettingStarted  = Erste Schritte
+footer.integration     = Integration
+footer.links           = N\u00FCtzliche Links
+footer.mailingList     = Mailing Liste
+footer.overview        = \u00DCberblick
+footer.privacyContact  = Kontakt und Datenschutz
+footer.quickstart      = <a href="/help_de/MainEinsteiger">Erste Schritte</a>
+footer.scraperInfo     = Unterst\u00FCtzte Kataloge
+footer.social.facebook = Facebook
+footer.social.google   = Google+ Community
+footer.social.twitter  = Folge uns auf Twitter
+footer.socialMedia     = Social Media
+footer.team            = <a href="/help_de/Team">Team</a>
+footer.what            = Was ist {0}?
+footer.wiki            = <a href="https://bitbucket.org/bibsonomy/bibsonomy/wiki">{0} Wiki</a>
 
 for = f\u00FCr
 
@@ -917,7 +918,7 @@ inboxPage.about = Wenn ein anderer Benutzer einen seiner Eintr\u00E4ge mit "send
 
 insert = Einf\u00FCgen
 
-issues = Probleme melden
+issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">Probleme melden</a>
 
 joinGroup = Gruppe beitreten
 
@@ -1035,7 +1036,7 @@ mysearch.option.tag           = Tags
 
 name = Name
 
-navi.about                       = Impressum
+navi.about                       = <a href="/help_en/contact">Impressum</a>
 navi.account                     = Account
 navi.admin                       = Administrator
 navi.admin.fulltextsearch        = Volltextsuche
