--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -714,25 +714,26 @@ followersPage.contentHeading                = \u0421\u043B\u0435\u0434\u0443\u04
 followersPage.entries.ofAllFollowedUsers    = \u0432\u0441\u0435\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439, \u043D\u0430 \u043A\u043E\u0442\u043E\u0440\u044B\u0445 \u0412\u044B \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u044B
 followersPage.entries.ofUser                = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F {0}, \u043D\u0430 \u043A\u043E\u0442\u043E\u0440\u043E\u0433\u043E \u0412\u044B \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u044B
 
-footer.about          = \u041E
-footer.academicPuma   = PUMA
-footer.buttons        = \u041A\u043D\u043E\u043F\u043A\u0438 \u0434\u043B\u044F \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0430
-footer.cookies        = <a href="/help_en/Cookies">Cookies</a>
-footer.developer      = \u0420\u0430\u0437\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A\u0430\u043C
-footer.gettingStarted = \u0421 \u0447\u0435\u0433\u043E \u043D\u0430\u0447\u0430\u0442\u044C
-footer.google         = \u0421\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E Google+
-footer.integration    = \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0446\u0438\u044F
-footer.links          = \u041F\u043E\u043B\u0435\u0437\u043D\u044B\u0435 \u0441\u0441\u044B\u043B\u043A\u0438
-footer.mailingList    = \u0421\u043F\u0438\u0441\u043E\u043A \u0440\u0430\u0441\u0441\u044B\u043B\u043A\u0438
-footer.overview       = \u041E\u0431\u0437\u043E\u0440
-footer.privacyContact = \u041A\u043E\u043D\u0442\u0430\u043A\u0442 \u0438 \u0437\u0430\u0449\u0438\u0442\u0430 \u043B\u0438\u0447\u043D\u044B\u0445 \u0434\u0430\u043D\u043D\u044B\u0445
-footer.quickstart     = <a href="/help_en/User%20Interface">\u0421 \u0447\u0435\u0433\u043E \u043D\u0430\u0447\u0430\u0442\u044C</a>
-footer.scraperInfo    = \u041F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u043C\u044B\u0435 \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A\u0438
-footer.socialMedia    = \u0421\u043E\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0435 \u0441\u0435\u0442\u0438
-footer.team           = \u041A\u043E\u043C\u0430\u043D\u0434\u0430
-footer.twitter        = \u041D\u0430\u0448 Twitter
-footer.what           = \u0427\u0442\u043E \u0442\u0430\u043A\u043E\u0435 {0}?
-footer.wiki           = {0} \u0412\u0438\u043A\u0438
+footer.about           = \u041E
+footer.academicPuma    = PUMA
+footer.buttons         = \u041A\u043D\u043E\u043F\u043A\u0438 \u0434\u043B\u044F \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0430
+footer.cookies         = <a href="/help_en/Cookies">Cookies</a>
+footer.developer       = \u0420\u0430\u0437\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A\u0430\u043C
+footer.gettingStarted  = \u0421 \u0447\u0435\u0433\u043E \u043D\u0430\u0447\u0430\u0442\u044C
+footer.integration     = \u0418\u043D\u0442\u0435\u0433\u0440\u0430\u0446\u0438\u044F
+footer.links           = \u041F\u043E\u043B\u0435\u0437\u043D\u044B\u0435 \u0441\u0441\u044B\u043B\u043A\u0438
+footer.mailingList     = \u0421\u043F\u0438\u0441\u043E\u043A \u0440\u0430\u0441\u0441\u044B\u043B\u043A\u0438
+footer.overview        = \u041E\u0431\u0437\u043E\u0440
+footer.privacyContact  = \u041A\u043E\u043D\u0442\u0430\u043A\u0442 \u0438 \u0437\u0430\u0449\u0438\u0442\u0430 \u043B\u0438\u0447\u043D\u044B\u0445 \u0434\u0430\u043D\u043D\u044B\u0445
+footer.quickstart      = <a href="/help_en/User%20Interface">\u0421 \u0447\u0435\u0433\u043E \u043D\u0430\u0447\u0430\u0442\u044C</a>
+footer.scraperInfo     = \u041F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u043C\u044B\u0435 \u0438\u0441\u0442\u043E\u0447\u043D\u0438\u043A\u0438
+footer.social.facebook = Facebook
+footer.social.google   = \u0421\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u043E Google+
+footer.social.twitter  = \u041D\u0430\u0448 Twitter
+footer.socialMedia     = \u0421\u043E\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0435 \u0441\u0435\u0442\u0438
+footer.team            = <a href="/help_en/Team">\u041A\u043E\u043C\u0430\u043D\u0434\u0430</a>
+footer.what            = \u0427\u0442\u043E \u0442\u0430\u043A\u043E\u0435 {0}?
+footer.wiki            = <a href="https://bitbucket.org/bibsonomy/bibsonomy/wiki">{0} \u0412\u0438\u043A\u0438</a>
 
 for = \u0434\u043B\u044F
 
@@ -918,7 +919,7 @@ inboxPage.about = When another user tags one of his posts with "send:{0}", it wi
 
 insert = \u0432\u0441\u0442\u0430\u0432\u0438\u0442\u044C
 
-issues = \u0421\u043E\u043E\u0431\u0449\u0438\u0442\u044C \u043E \u043F\u0440\u043E\u0431\u043B\u0435\u043C\u0435
+issues = <a href="http://bitbucket.org/bibsonomy/bibsonomy/issues">\u0421\u043E\u043E\u0431\u0449\u0438\u0442\u044C \u043E \u043F\u0440\u043E\u0431\u043B\u0435\u043C\u0435</a>
 
 joinGroup = \u043F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0438\u0442\u044C\u0441\u044F \u043A \u0433\u0440\u0443\u043F\u043F\u0435
 
@@ -1037,7 +1038,7 @@ mysearch.option.tag           = \u0442\u044D\u0433\u0438
 
 name = \u0438\u043C\u044F
 
-navi.about                       = \u043E \u043D\u0430\u0441
+navi.about                       = <a href="/help_en/contact">\u043E \u043D\u0430\u0441</a>
 navi.account                     = \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 navi.admin                       = \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 navi.admin.fulltextsearch        = 
