fixed snippet label on postpublication

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1969,8 +1969,7 @@ scraper_info.title                    = scraper info
 
 search.invalid.query = Your search query was invalid. Please check your search query for invalid characters and try again. 
 
-selection = Select
-
+selection = snippet
 selection.help = Insert here your BibTeX or EndNote code snippet.
 
 settings.aboutMe                                            = about me
