--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1917,8 +1917,7 @@ scraper_info.title                    = Information zu Scrapern
 
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
-selection = Auswahl
-
+selection = Schnipsel
 selection.help = F\u00FCgen Sie hier Ihren BibTeX oder EndNote Schnipsel ein.
 
 settings.aboutMe                                            = \u00DCber mich
