modal login forms

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -65,6 +65,11 @@ admin.userinfo.Username            = Username
 
 and = and
 
+auth.header        = Login
+auth.internal.help = Log in with your username.
+auth.ldap.help     = Log in with your LDAP account.
+auth.openid.help   = Log in with your OpenID-Provider.
+
 available = available
 
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
@@ -1970,6 +1975,7 @@ scraper_info.title                    = scraper info
 search.invalid.query = Your search query was invalid. Please check your search query for invalid characters and try again. 
 
 selection = snippet
+
 selection.help = Insert here your BibTeX or EndNote code snippet.
 
 settings.aboutMe                                            = about me
