--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -65,6 +65,11 @@ admin.userinfo.Username            = Benutzername
 
 and = und
 
+auth.header        = Anmelden
+auth.internal.help = Melden Sie sich mit Ihrem Benutzernamen an.
+auth.ldap.help     = Melden Sie sich mit Ihrem LDAP Account an.
+auth.openid.help   = Melden Sie sich mit Ihrem OpenID-Provider an.
+
 available = verf\u00FCgbar
 
 batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
@@ -1918,6 +1923,7 @@ scraper_info.title                    = Information zu Scrapern
 search.invalid.query = Ihre Suchanfrage war ung\u00FCltig. Bitte pr\u00FCfen Sie Ihre Suchanfrage auf ung\u00FCltige Zeichen und probieren Sie es noch einmal.
 
 selection = Schnipsel
+
 selection.help = F\u00FCgen Sie hier Ihren BibTeX oder EndNote Schnipsel ein.
 
 settings.aboutMe                                            = \u00DCber mich
