--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -65,6 +65,11 @@ admin.userinfo.Username            = \u0418\u043C\u044F \u043F\u043E\u043B\u044C
 
 and = \u0438
 
+auth.header        = 
+auth.internal.help = 
+auth.ldap.help     = 
+auth.openid.help   = 
+
 available = \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435
 
 batchedit = 
