#2159 was already fixed, but now I added a tiny correction

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1976,7 +1976,7 @@ search.invalid.query = Your search query was invalid. Please check your search q
 
 selection = snippet
 
-selection.help = Insert here your BibTeX or EndNote code snippet.
+selection.help = Insert your BibTeX or EndNote code snippet here.
 
 settings.aboutMe                                            = about me
 settings.add                                                = add
